--- a/src/components/Layout/Topbar.css
+++ b/src/components/Layout/Topbar.css
@@ -1,10 +1,12 @@
 * {
     font-family: var(--nunito);
 }
+
 .topbar-all {
     background-color: #E02216;
     height: 100px;
 }
+
 .judul-top {
     color: white !important;
     font-size: 32px !important;
@@ -12,4 +14,37 @@
     margin-left: 32px;
     margin-top: 0.5rem;
     margin-bottom: 0.5rem;
-    }
+}
+.topbar-icon {
+    color: white;
+    font-size: 24px;
+    margin-right: 20px;
+}
+.profile-section {
+  display: flex;
+  align-items: center;
+  margin-right: 40px;
+}
+.profile-icon {
+  width: 40px;
+  height: 40px;
+  margin-right: 10px;
+}
+.profile-info {
+  display: flex;
+  flex-direction: column;
+}
+.profile-name {
+  color: white;
+  font-size: 14px;
+  font-weight: 600;
+}
+.profile-image {
+  width: 40px;
+  height: 40px;
+}
+.notif-name {
+  color: white;
+  font-size: 14px;
+  font-weight: 600;
+}
