--- a/src/styles/ListBerita.css
+++ b/src/styles/ListBerita.css
@@ -1,3 +1,7 @@
+*{
+    font-family: var(--nunito);
+}
+  
 .text1{
     color: #E02216;
     height: 49px;
@@ -34,9 +38,7 @@
 
 #text2{
     height: 30px;
-    width: 80px;
+    width: 100px;
     border-radius: 15px;
     justify-content: center;
-    align-items: center;
-    text-align: center;
 }
