--- a/src/styles/landing-page.css
+++ b/src/styles/landing-page.css
@@ -131,7 +131,7 @@
 
 .image__wrapper::before {
   content: "";
-  background-color: #9a0000;
+  background-color: #e64e45;
   position: absolute;
   height: 61%;
   border-radius: 0 30px 30px 0;
