--- a/src/components/Layout/Topbar.css
+++ b/src/components/Layout/Topbar.css
@@ -1,24 +1,24 @@
 * {
-    font-family: var(--nunito);
+  font-family: var(--nunito);
 }
 
 .topbar-all {
-    background-color: #E02216;
-    height: 100px;
+  background-color: #e02216;
+  height: 100px;
 }
 
 .judul-top {
-    color: white !important;
-    font-size: 32px !important;
-    font-weight: 700;
-    margin-left: 32px;
-    margin-top: 0.5rem;
-    margin-bottom: 0.5rem;
+  color: white !important;
+  font-size: 32px !important;
+  font-weight: 700;
+  margin-left: 32px;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 .topbar-icon {
-    color: white;
-    font-size: 24px;
-    margin-right: 20px;
+  color: white;
+  font-size: 24px;
+  margin-right: 20px;
 }
 .profile-section {
   display: flex;
