--- a/src/components/TambahBerita/FormBerita.css
+++ b/src/components/TambahBerita/FormBerita.css
@@ -1,15 +1,24 @@
-.berita{
+.form__berita {
   background-color: rgb(255, 195, 190);
-  padding: 25px;
+  padding: 25px 25px 25px 25px;
   font-size: 18px;
   font-weight: bold;
 }
-.text{
+
+.title__form-berita span {
+  font-weight: 800;
+  color: var(--secondary-color);
+}
+
+.form__berita Label {
+  font-weight: 700;
+  color: var(--secondary-color);
+}
+
+.text {
   margin-top: 50px;
 }
-.button{
-  width: 100px;
-  height: 40px;
+
+.button__form-berita {
+  width: 40%;
 }
-
-
