edit : class name selector

--- a/src/styles/new-password.css
+++ b/src/styles/new-password.css
@@ -25,7 +25,7 @@
   border-radius: 5rem;
 }
 
-.title {
+.title__title {
   font-weight: 700;
   font-size: 2rem;
 }
@@ -85,18 +85,4 @@
 .content p > button {
   background: none !important;
   border: none;
-}
-
-.background .vector3 {
-  z-index: 5;
-  width: 100%;
-  margin-bottom: -265px;
-}
-
-.background .ellipse {
-  position: absolute !important;
-  z-index: 1;
-  width: 14%;
-  margin-right: -500px;
-  margin-top: -450px;
 }
