--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -25,7 +25,7 @@
   border-radius: 5rem;
 }
 
-.title {
+.title__login {
   font-weight: 700;
   font-size: 2rem;
 }
@@ -85,12 +85,6 @@
 .content p > button {
   background: none !important;
   border: none;
-}
-
-.background .vector {
-  z-index: 5;
-  width: 100%;
-  margin-bottom: -209px;
 }
 
 .background .ellipse {
