--- a/src/components/Layout/Sidebar.css
+++ b/src/components/Layout/Sidebar.css
@@ -22,5 +22,8 @@
 }
 
 .active-link {
-    background-color: #28a745; /* Green color for the active link */
+    background-color: #E02216;
+    border-radius: 5px;
+    transition: all 0.5s;
+    box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
 }
