--- a/src/components/ListBerita/ListBerita.css
+++ b/src/components/ListBerita/ListBerita.css
@@ -50,7 +50,11 @@
   align-items: center;
 }
 
-#btn-tambah{
+#btn-tambah {
   margin-top: 100px;
   margin-bottom: 0px;
+}
+
+#table__berita {
+  border: #b9b9b9 solid 1px;
 }
