--- a/src/components/Modal/css/detail.css
+++ b/src/components/Modal/css/detail.css
@@ -1,8 +1,9 @@
 /* Header styling */
 .header-detail {
     display: flex;
-    /* justify-content: space-evenly; */
-    gap: 7rem;
+    justify-content: space-between;
+    align-items: center;
+    /* gap: 7rem; */
     margin-top: 3rem;
     border-bottom: 4px solid #f1f1f1;
 }
