--- a/src/components/ListBerita/ListBerita.css
+++ b/src/components/ListBerita/ListBerita.css
@@ -3,6 +3,26 @@
   justify-content: space-around;
   align-items: center;
 }
+/* Warna normal untuk page link */
+.pagination-red .pagination .page-link {
+  background-color: #fff;
+  border-color: #e02216;
+  color: #e02216;
+}
+
+/* Warna saat hover pada page link */
+.pagination-red .pagination .page-link:hover {
+  background-color: #e02216;
+  border-color: #e02216;
+  color: #fff;
+}
+
+/* Warna untuk page aktif */
+.pagination-red .pagination .page-item.active .page-link {
+  background-color: #e02216;
+  border-color: #e02216;
+  color: #fff;
+}
 
 .text1 {
   color: #e02216;
@@ -57,4 +77,19 @@
 
 #table__berita {
   border: #b9b9b9 solid 1px;
+}
+
+.btn-ok {
+  background: #e64e45 !important;
+  color: #fff !important;
+}
+
+.btn-cancel {
+  background: #f3a7a2 !important;
+  color: #e02216 !important;
+  border: 1px solid #e02216 !important;
+}
+
+html, body {
+  overflow-x: hidden !important;
 }
